feat: add endpoint to fetch user info
